# chip8-embedded

./: .gitignore  Cargo.toml  README.md
src/: chip8.rs  display.rs  instruction.rs  main.rs  quirks.rs
