[package]
name = "oled-test"
version = "0.1.0"
edition = "2024"

[dependencies]
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
linux-embedded-hal = "0.4.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
rppal = "0.22.1"
spidev = "0.7.0"
ssd1306 = "0.10.0"
